# spider-crab

./: .gitignore  Cargo.toml  README.md  algo.plantuml
.github/workflows/: lint_fmt_test.yml  release.yml  rust.yml
src/: algo.rs  dot.rs  error.rs  ignore_rules.rs  lib.rs  main.rs  negative_tests.rs  positive_tests.rs  test_utils.rs  tests.rs  url_helpers.rs
src/test_assets/: page1.html  page2.html  pageA.html  pageB.html  pageC.html
